Add button-home class to CSS files and update HTML templates with HOME link

--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -23,6 +23,29 @@ h3 {
   margin-bottom: 20px;
 }
 
+.button-home {
+  background-color: #5C6BC0;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 0;
+  line-height: 1;
+  text-decoration: none; /* Removes underline */
+  font-style: normal; /* Removes italics */
+  display: inline-block; /* Aligns the button horizontally */
+  margin-right: 20px;
+  font-weight: bold;
+}
+
+.button-home:hover {
+  background-color: #3F51B5;
+  color: #ffffff;
+}
+
 .top-ribbon {
   background-color: #111;
   height: 101px;
