--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="top-ribbon">
+        <a href="{{ url_for('home') }}" class="button-home">HOME</a>
         <span class="company-name">
             <a href="https://www.eccoai.org/">
                 <img src="{{ url_for('static', filename='images/logoword2.png') }}" alt="Company Logo">
