--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -17,6 +17,29 @@ html, body {
 h3 {
     font-family: Arial, sans-serif;
   }
+  .button-home {
+    background-color: #5C6BC0;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-bottom: 0;
+    line-height: 1;
+    text-decoration: none; /* Removes underline */
+    font-style: normal; /* Removes italics */
+    display: inline-block; /* Aligns the button horizontally */
+    margin-right: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+  }
+  
+  .button-home:hover {
+    background-color: #3F51B5;
+    color: #ffffff;
+  }
 
   .company-name {
     margin-right: 10px;
