--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -26,7 +26,29 @@ html, body {
   width: auto;
 }
 
+.button-home {
+  background-color: #5C6BC0;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 0;
+  line-height: 1;
+  text-decoration: none; /* Removes underline */
+  font-style: normal; /* Removes italics */
+  display: inline-block; /* Aligns the button horizontally */
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
 
+.button-home:hover {
+  background-color: #3F51B5;
+  color: #ffffff;
+}
 
 .sidepanel {
     height: 100%; /* Specify a height */
