Made arrow minimize chatbot and changed sources to display favicon and fixed issue with LLM not saving

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -192,6 +192,10 @@
             position: relative; /* Add this line */
         }
         
+        .source a:hover {
+            background-color: #f0f0f0;
+        }
+
         .right-msg .msg-bubble::after {
             content: "";
             position: absolute;
