--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,12 @@
         /* CSS styles for the widget */
 
-        .widget {
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* .widget {
             position: fixed;
             bottom: 20px;
             right: 20px;
@@ -8,22 +14,21 @@
             max-width: 100%; 
             right: 0px; 
             max-height: 100%;
+        } */
+
+        .widget {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        .widget-button {
-            width: 100px;
-            height: 100px;
-            background-image: url('/static/images/chatboticon.png');
-            background-size: cover;
-            transition: transform 0.2s ease-in-out;
-        }
-
-        .widget-button:hover {
-            transform: scale(1.1);
-        }
-
-        .chatbot {
-            /* display: none; */
+        /* .chatbot {
             position: fixed;
             bottom: 15px;
             right: 20px;
@@ -34,6 +39,26 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
             animation: slide-up 0.5s ease-out;
+        } */
+        
+        .chatbot {
+            width: 100%; /* Adjust based on preference */
+            height: 100%; /* Adjust based on preference */
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Add this line */
+        }
+
+        .chatbox {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            background-color: var(--background-color);
+            border-radius: 10px;
         }
 
         .chatbox-header {
@@ -55,11 +80,44 @@
             display: flex;
             align-items: center;
         }
+
         .chatbox-icon {
             margin-right: 10px;
         }
 
-        .chatbox-body {
+        .chatbox-title img {
+            margin-right: 10px;
+            width: 40px;
+            height: 40px;
+        }
+
+        .chatbox-top {
+            overflow-y: scroll;
+            width: 190px;
+            background-color: var(--border-color);
+            font-family: var(--font-family);
+            align-items: center;
+            color: var(--title-color);
+        }
+
+        .close-button {
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+        }
+        
+        .close-button:hover {
+            transform: scale(1.1);
+        }
+
+        .chatbox-close {
+            position: absolute;
+            padding-top: 5px;
+            right: 10px;
+        }
+
+        /* .chatbox-body {
             flex-grow: 1;
             padding: 5px;
             width: 340.5px;
@@ -67,6 +125,55 @@
             overflow-y: scroll;
             font-family: var(--font-family);
             background-color: var(--background-color);
+        } */
+
+        .chatbox-body {
+            flex-grow: 1;
+            padding: 10px;
+            overflow-y: auto;
+            font-family: var(--font-family);
+            background-color: var(--background-color);
+        }
+
+        .suggested-questions {
+            display: flex;
+            overflow-x: scroll;
+            white-space: nowrap;
+            border-radius: 7px;
+            margin-bottom: 9px;
+        } 
+        .suggested-question {
+            display: flex;
+            padding: 5px;
+            margin: 2px;
+            background-color: gainsboro;
+            border-radius: 7px;
+            cursor: pointer;
+            font-size: 12px;
+            letter-spacing: -0.5px;
+            color: rgb(61, 61, 61);
+            margin-bottom: 9px;
+        }
+        .suggested-questions::-webkit-scrollbar { /* For Chrome, Safari and Edge */
+            margin-top: 5px;
+            height: 5px;
+        }
+
+        .suggested-questions::-webkit-scrollbar-thumb {
+            background-color: darkgrey;
+            border-radius: 3px;
+        }
+
+        .widget-button {
+            width: 100px;
+            height: 100px;
+            background-image: url('/static/images/chatboticon.png');
+            background-size: cover;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .widget-button:hover {
+            transform: scale(1.1);
         }
 
         .chatbox-input {
@@ -75,6 +182,37 @@
             align-items: center;
             padding: 10px;
             background-color: #ffffff;
+        }
+
+        .input-wrapper {
+            display: flex;
+            flex-grow: 1;
+            background-color: #f5f5f5;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+
+        #user-input {
+            flex-grow: 1;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            background-color: transparent;
+            margin-right: 5px;
+        }
+
+        #send-button svg {
+            width: 30px; /* adjust as needed */
+            height: 30px; /* adjust as needed */
+            cursor: pointer;
+            padding-top: 10px;
+            fill: rgb(0,0,0);
+            transition: transform 0.3s ease-in-out;
+        }
+
+        #send-button svg:hover {
+            transform: scale(1.1);
         }
 
         .powered-by {
@@ -92,40 +230,9 @@
             vertical-align: middle;
             padding-bottom: 4px;
             padding-left: 2px;
-        }
-        
-        .input-wrapper {
-            display: flex;
-            flex-grow: 1;
-            background-color: #f5f5f5;
-            border-radius: 10px;
-        }
+        }   
 
-        #user-input {
-            flex-grow: 1;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            background-color: transparent;
-            margin-right: 5px;
-        }
-
-        .chatbox-title img {
-            margin-right: 10px;
-            width: 40px;
-            height: 40px;
-        }
-        
-        .chatbox-top {
-            overflow-y: scroll;
-            width: 190px;
-            background-color: var(--border-color);
-            font-family: var(--font-family);
-            align-items: center;
-            color: var(--title-color);
-        }
-
+        /* The styling for the chatbot messages and rating begins here */
         .msg-info-name {
             display: flex;
             align-items: flex-end;
@@ -136,20 +243,6 @@
             height: 30px;
             margin-right: 9px;
 
-        }
-        
-
-        #send-button svg {
-            width: 30px; /* adjust as needed */
-            height: 30px; /* adjust as needed */
-            cursor: pointer;
-            padding-top: 10px;
-            fill: rgb(0,0,0);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        #send-button svg:hover {
-            transform: scale(1.1);
         }
 
         .msg {
@@ -193,7 +286,7 @@
         }
         
         .source a:hover {
-            background-color: #f0f0f0;
+            background-color: darkgrey;
         }
 
         .right-msg .msg-bubble::after {
@@ -274,6 +367,7 @@
         .msg-image span:nth-child(3) {
             animation-delay: 0.2s;
         }
+        /* The styling for the chatbot messages and rating ends here */
 
         @keyframes typing {
             0% {
@@ -306,6 +400,7 @@
                 transform: translateY(100%);
             }
         }
+        /* I'm not sure where all these post classes are coming from */
         .post {
             width: 400px;
             font-family: 'Lexend', sans-serif;
@@ -327,68 +422,22 @@
             cursor: default;
         }
 
-        .close-button {
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
-        }
-        
-        .close-button:hover {
-            transform: scale(1.1);
-        }
-
-        .chatbox-close {
-            position: absolute;
-            padding-top: 5px;
-            right: 10px;
-        }
-
         .post-rating-button {
             margin-right: 4px;
             cursor: pointer;
             color: #555555;
         }
-        html body {
+        /* html body {
             border: none;
         }
         body {
             overflow-x: auto; 
-        }
+        } */
 
         /* suggested questions */
         .parent-div {
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-        }
-
-        .suggested-questions {
-            display: flex;
-            overflow-x: scroll;
-            white-space: nowrap;
-            border-radius: 7px;
-            margin-bottom: 9px;
-        }
-        .suggested-question {
-            display: flex;
-            padding: 5px;
-            margin: 2px;
-            background-color: gainsboro;
-            border-radius: 7px;
-            cursor: pointer;
-            font-size: 12px;
-            letter-spacing: -0.5px;
-            color: rgb(61, 61, 61);
-            margin-bottom: 9px;
-        }
-        .suggested-questions::-webkit-scrollbar { /* For Chrome, Safari and Edge */
-            margin-top: 5px;
-            height: 5px;
-        }
-
-        .suggested-questions::-webkit-scrollbar-thumb {
-            background-color: darkgrey;
-            border-radius: 3px;
         }
         /* suggested questions done */
