--- a/templates/settings.html
+++ b/templates/settings.html
@@ -95,7 +95,7 @@
 
                         <label for="logo">Logo:</label><br>
                         <img id="currentLogo" src="{{ settings['logo'] }}" alt="Current Logo" style="width: 100px; height: 100px;">
-                        <input type="file" id="logo" name="logo" accept="image/*" {% if user_plan == 'price_1P9FIULO2ToUaMQEmx2wG1qC' %}disabled{% endif %}><br>
+                        <input type="file" id="logo" name="logo" accept="image/png" {% if user_plan == 'price_1P9FIULO2ToUaMQEmx2wG1qC' %}disabled{% endif %}><br>
                         
                         <br>
                         <label for="font_style">Font Style:</label>
