added popup.js to add chatbot

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -76,5 +76,8 @@
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
+    <!-- <script src="/<user_id>/<chatbot_id>/popup.js"></script> -->
+    <!-- <script type="text/javascript" src="https://yourwebsite.com/<user_id>/<chatbot_id>/popup.js" async></script> -->
 </body>
 </html>
