--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -76,8 +76,6 @@
         </div>
     </div>
     <script src="{{ url_for('static', filename='js/analytics.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/popup.js') }}"></script>
-    <!-- <script src="/<user_id>/<chatbot_id>/popup.js"></script> -->
-    <!-- <script type="text/javascript" src="https://yourwebsite.com/<user_id>/<chatbot_id>/popup.js" async></script> -->
+    <script type="text/javascript" src="http://127.0.0.1:5000/71/90/popup.js"></script>
 </body>
 </html>
