--- a/static/css/index.css
+++ b/static/css/index.css
@@ -45,7 +45,7 @@
             width: 100%; /* Adjust based on preference */
             height: 100%; /* Adjust based on preference */
             background-color: white;
-            border-radius: 10px;
+            /* border-radius: 10px; */
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
@@ -58,7 +58,7 @@
             width: 100%;
             height: 100%;
             background-color: var(--background-color);
-            border-radius: 10px;
+            /* border-radius: 10px; */
         }
 
         .chatbox-header {
@@ -68,8 +68,8 @@
             padding: 10px;
             background-color: var(--border-color);
             color: rgb(0, 0, 0);
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
+            /* border-top-left-radius: 10px;
+            border-top-right-radius: 10px; */
             text-align: center;
         }
 
