--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -192,7 +192,8 @@ h3 {
     flex-basis: 70%;
     margin: 10px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(252, 252, 252, 0.1);
+    background-color: #161616;
 }
 
 .chart-container {
@@ -202,8 +203,9 @@ h3 {
     align-items: center;
     margin: 10px;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     height: 600px;
+    background-color: #161616;
 }
 
 .chart-container {
@@ -291,4 +293,8 @@ h3 {
 .tooltip:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
+}
+body {
+  background-color: rgb(0, 0, 0);
+  color: rgb(237, 237, 237);
 }
