--- a/templates/admin.html
+++ b/templates/admin.html
@@ -147,7 +147,7 @@
                                     <td>
                                         <div class="bin-container">
                                             <form action="/{{ chatbot_id }}/delete/{{ document.id }}" method="post" style="display: inline;" onsubmit="return confirm('Are you sure you want to delete this document?');">
-                                                <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin.png') }}" alt="Submit">
+                                                <input class ="bin" type="image" src="{{ url_for('static', filename='images/bin (1).png') }}" alt="Submit">
                                             </form>
                                         </div>
                                     </td>
