--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -218,14 +218,15 @@ h3 {
   width: 100%;
   border-collapse: collapse;
   font-family: Arial, sans-serif; /* Use a clean, simple font */
+  border-radius: 10px;
 }
 
 .questions-container th {
-  border: 1px solid #ddd; /* Lighter border color for headers */
+  border: 1px solid #ddd;
   padding: 12px 8px;
   text-align: left;
-  background-color: #f2f2f2; /* Light grey background for headers */
-  color: #333; /* Dark grey text for headers */
+  background-color: #c1c1c1; /* Light grey background for headers */
+  color: #333;
 }
 
 .questions-container td {
@@ -235,7 +236,7 @@ h3 {
 }
 
 /* Add a hover effect for rows */
-.questions-container tr:hover {background-color: #ddd;}
+.questions-container tr:hover {background-color: #535353;}
 
 
 .instructions {
@@ -297,4 +298,5 @@ h3 {
 body {
   background-color: rgb(0, 0, 0);
   color: rgb(237, 237, 237);
+  font-family: Tahoma;
 }
