--- a/static/css/integrations.css
+++ b/static/css/integrations.css
@@ -209,10 +209,11 @@ html, body {
 }
 
 .instructions {
-    font-family: Arial, sans-serif;
+    font-family: Tahoma;
     margin-left: 100px; /* left margin of 100px */
 }
 body {
   background-color: rgb(0, 0, 0);
   color: rgb(237, 237, 237);
+  font-family: Tahoma;
 }
