--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -387,11 +387,11 @@ textarea {
 
 .button-35 {
   align-items: center;
-  background-color: #fff;
+  background-color: #000000;
   border-radius: 12px;
   box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
   box-sizing: border-box;
-  color: #121212;
+  color: #c3c3c3;
   cursor: pointer;
   display: inline-flex;
   flex: 1 1 auto;
