--- a/templates/settings.html
+++ b/templates/settings.html
@@ -44,8 +44,8 @@
 
         <div id="settings-page">
             <div class="button-holder">
-            <button class="button-35 selected" onclick="showPage('styling-settings')">Styling Settings</button>
-            <button class="button-35" onclick="showPage('system-settings')">System Settings</button>
+            <button class="button-35 selected" onclick="showPage('styling-settings')">STYLING SETTINGS</button>
+            <button class="button-35" onclick="showPage('system-settings')">SYSTEM SETTINGS</button>
             <button class="button-35" onclick="showPage('faq-settings')">FAQ</button>
         </div>
         <form id="settingsForm" action="{{ url_for('update_chatbot_settings', chatbot_id=chatbot_id) }}" method="post" enctype="multipart/form-data">
