Finalized integrations page, changed background colors of pages, and added icons to copy/paste code

--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -296,7 +296,7 @@ h3 {
   opacity: 1;
 }
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #313131;
   color: rgb(237, 237, 237);
   font-family: Tahoma;
 }
