--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -563,7 +563,7 @@ section {
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #313131;
   color: rgb(237, 237, 237);
   font-family: Tahoma;
 }
