--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -246,6 +246,7 @@ body {
 .settings-section {
   padding: 20px;
   width: 45%; /* Adjust this value as needed */
+  min-width: 380px;
 }
 .settings-section1 {
   margin-left: 100px;
@@ -391,7 +392,7 @@ textarea {
   border-radius: 12px;
   box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
   box-sizing: border-box;
-  color: #c3c3c3;
+  color: #ffffff;
   cursor: pointer;
   display: inline-flex;
   flex: 1 1 auto;
@@ -456,7 +457,7 @@ body {
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: #313131;
   color: rgb(237, 237, 237);
   font-family: Tahoma;
 }
