--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -32,45 +32,30 @@
             <a href="{{ url_for('analytics', chatbot_id=chatbot_id) }}" id="analytics" class="mgn">Analytics</a>
         </div>
     </section>
-    <h2 class="instructions">Popup Chat</h2>
-    <p class="instructions">Copy and paste this code before the &lt;/body&gt; tag on your website:</p>
-    <ul class="instructions">
-        <li>To learn more about embedding this code onto your Webflow site, click the link <a href="https://university.webflow.com/lesson/custom-code-in-the-head-and-body-tags?topics=site-settings" target="_blank">here</a>.</li>
-        <li>To learn more about embedding this code onto your Wordpress site, click the link <a href="https://wordpress.com/support/code/" target="_blank">here</a>.</li>
-    </ul>
+    <h2 class="instructions">Web Page</h2>
     <div class="code-container">
-        <pre><code id="chatbot-code" class="language-javascript">
-            &lt;img id="b" src="https://app.eccoai.org//static/images/{{ settings.widget_icon }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
-            &lt;div id="p" style="display:block;position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);"&gt;{{ settings.popup_message }}&lt;/div&gt;
-            &lt;span id="c" style="display:none;position:fixed;bottom:128px;right:10px;z-index:10001;cursor:pointer;padding:2px 6px;border-radius:10px;background-color:#dadada;font-family: arial;color: #4e4e4e;"&gt;x&lt;/span&gt;
-            &lt;iframe src="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}" id="e" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"&gt;&lt;/iframe&gt;
-            &lt;script&gt;
-                var p=document.getElementById('p'),c=document.getElementById('c'),b=document.getElementById('b');
-                p.onmouseover=c.onmouseover=function(){c.style.display='block'};
-                p.onmouseout=function(){c.style.display='none'};
-                c.onclick=function(){p.style.display=c.style.display='none'};
-                b.addEventListener('mouseover', function() {
-                    this.style.transform = 'scale(1.1)';
-                });
-                b.addEventListener('mouseout', function() {
-                    this.style.transform = 'scale(1)';
-                });
-                b.addEventListener('click', function() {
-                    var iframe = document.getElementById('e');
-                    if (iframe.style.display === 'none') {
-                        iframe.style.display = 'block';
-                        p.style.display = 'none'; // hide the 'p' element
-                    } else {
-                        iframe.style.display = 'none';
-                    }
-                });
-                function closeChatbot() {
-                    var iframe = document.getElementById('e');
-                    iframe.style.display = 'none';
-                }
-            &lt;/script&gt;
-        </code></pre>
-        <button class="copy-btn" onclick="copyCode()" style="cursor: pointer;">Copy Code</button>
+        <div class="webpage">
+            <a id="webpage-link">http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}/</a>
+        </div>
+        <a id="view-website-btn" href="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}" target="_blank">
+            <img src="{{ url_for('static', filename='images/globe.png') }}" class="copy-img" style="cursor: pointer;"> <!-- Replace the button with an image -->
+        </a>
+    </div>
+    <h2 class="instructions">Popup Chat</h2>
+    <div class="code-container">
+        <div class="webpage">
+            <pre><code id="chatbot-code" class="language-javascript">&lt;script type="text/javascript" src="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}/popup.js"&gt;&lt;/script&gt;</code></pre>
+            <img src="{{ url_for('static', filename='images/copy.png') }}" class="copy-img" onmouseover="showTooltip(this)" onmouseout="hideTooltip(this)" onclick="copyCode(this)" style="cursor: pointer;">
+            <span class="tooltip">Copy to Clipboard</span>
+        </div>
+    </div>
+    <h2 class="instructions">Embedded Chat (iframe)</h2>
+    <div class="code-container">
+        <div class="webpage">
+            <pre><code id="iframe-code" class="language-html">&lt;iframe id="chatbot-iframe" src="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}" width="100%" height="700" style="visibility: hidden; border: none;" onload="this.style.visibility='visible';" allow="autoplay; clipboard-read; clipboard-write"&gt;&lt;/iframe&gt;</code></pre>
+            <img src="{{ url_for('static', filename='images/copy.png') }}" class="copy-img" onmouseover="showTooltip(this)" onmouseout="hideTooltip(this)" onclick="copyIframeCode(this)" style="cursor: pointer;">
+            <span class="tooltip">Copy to Clipboard</span>
+        </div>
     </div>
     <script src="{{ url_for('static', filename='js/integrations.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
