--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
         --dot-color: {{ settings.dot_color }};
         --title-color: {{ settings.title_color }};
         --border-color: {{ settings.border_color }};
-
+        --bot-bubble-color: {{ settings.bot_bubble_color }};
+        --user-bubble-color: {{ settings.user_bubble_color }};
     }
-    </style>
-</html>
+</style>
