--- a/templates/settings.html
+++ b/templates/settings.html
@@ -76,6 +76,14 @@
                         <input type="color" id="dot_color" name="dot_color" value="{{ settings['dot_color'] }}">
                         <label for="dot_color">Dot Animation Color.</label>
                         <br><br>
+
+                        <input type="color" id="bot_bubble_color" name="bot_bubble_color" value="{{ settings['bot_bubble_color'] }}">
+                        <label for="bot_bubble_color">Bot Text Bubble Color.</label>
+                        <br><br>
+                
+                        <input type="color" id="user_bubble_color" name="user_bubble_color" value="{{ settings['user_bubble_color'] }}">
+                        <label for="user_bubble_color">User Text Bubble Color.</label>
+                        <br><br>
                         
                         <label for="chatbot_title">Chatbot Title:</label>
                         <input type="text" id="chatbot_title" name="chatbot_title" value="{{ settings['chatbot_title'] }}" maxlength="20"><br>
