Updated URLs to use production server and deleted popup.js to clear up space

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -159,7 +159,7 @@
                 </section>
             </section>
         </div>
-        <script type="text/javascript" src="http://127.0.0.1:5000/71/90/popup.js"></script>  
+        <script type="text/javascript" src="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>  
         <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 </body>
 </html>
