--- a/templates/settings.html
+++ b/templates/settings.html
@@ -191,13 +191,9 @@
                 </div>
             </div> 
             <input type="submit" value="Save Settings">          
-        </form>
-        
-        
-
-            
+        </form>           
     </div>
-    <script type="text/javascript" src="http://127.0.0.1:5000/71/90/popup.js"></script>
+    <script type="text/javascript" src="https://app.eccoai.org/{{ user_id }}/{{ chatbot_id }}/popup.js"></script>
     <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
 </body>
 </html>
